# pattern-data-engine

./: .gitignore  Makefile  README.md  pyproject.toml
modules/: high_throughput.py  ontology_mapper.py
schemas/: DNA_seq.sql  mRNA_seq.sql  scRNA_seq.sql
