[tool.poetry]
name = "pattern-data-engine"
version = "0.1.0"
description = "&&&"
authors = ["Martin Klosi <roise3000@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
requests = "*"
pytest = "*"
pytest-mock = "*"
python = "~3.10"
pytz = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
